--- a/themes/static/css/theme-cerl.css
+++ b/themes/static/css/theme-cerl.css
@@ -3,6 +3,7 @@
   --color-header-bg:      #0d2b36;
   --color-header-text:    #f0f0f0;
   --color-nav-active:     #1e6070;
+  --color-aside-link:     #1e5f6e;
   --color-heading:        #0d2b36;
   --color-heading-border: #2e7a8c;
   --color-accent:         #2e7a8c;
@@ -24,6 +25,7 @@
     --color-heading-border: #2e7a8c;
     --color-accent:         #4db8cc;
     --color-accent-hover:   #7dcfdd;
+    --color-aside-link:     #4db8cc;
     --color-body-bg:        #0d1b22;
     --color-text:           #e2ecee;
     --color-text-light:     #8faab2;
